[package]
name = "dicer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
regex = "1.8.0"
rustyline = "11.0.0"
dicer_lib = {git = "https://github.com/sanrafa/dicer_lib.git", branch = "main"}
anyhow = "1.0.71"
